# assistant

./: .gitignore  pyproject.toml
docs/plans/: 2026-03-09-aa-implementation-plan.md  2026-03-09-aa-personal-assistant-design.md  2026-03-10-shell-and-file-sources-design.md  2026-03-10-shell-and-file-sources-plan.md
docs/superpowers/plans/: 2026-03-25-web-ui-plan.md
docs/superpowers/specs/: 2026-03-25-web-ui-design.md
src/aa/: __init__.py  cli.py  config.py  daemon.py  db.py  notes_watcher.py  notifications.py  server.py  shell.py  web.py
src/aa/ai/: __init__.py  ask.py  drafts.py  notes.py  rules.py  triage.py
src/aa/connectors/: __init__.py  base.py  calendar.py  files.py  gmail.py  mattermost.py  outlook.py  slack.py
src/aa/static/: app.js  style.css
src/aa/templates/: base.html
src/aa/templates/partials/: chat_message.html  todo_detail.html  todo_row.html  todo_table.html
tests/: test_ai_ask.py  test_ai_drafts.py  test_ai_notes.py  test_ai_rules.py  test_ai_triage.py  test_cli.py  test_cli_commands.py  test_cli_source.py  test_config.py  test_connector_calendar.py  test_connector_files.py  test_connector_gmail.py  test_connector_mattermost.py  test_connector_outlook.py  test_connector_slack.py  test_connectors_base.py  test_db.py  test_integration.py  test_notes_watcher.py  test_notifications.py  test_server.py  test_shell.py  test_web.py
