[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aa"
version = "0.1.0"
description = "Personal AI assistant"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "httpx>=0.27",
    "msal>=1.28",
    "msgraph-sdk>=1.0",
    "slack-sdk>=3.27",
    "mattermostdriver>=7.3",
    "uvloop>=0.19",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
aa = "aa.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
